# hackhaton_digiedu

./: .env  .env.example  .gitignore  FILE_UPLOAD_INTEGRATION.md  LICENSE  Makefile  README.md  docker-compose.yml
data_processing/: .dockerignore  .env.example  .gitignore  AUDIO_TRANSCRIPTION.md  Cargo.toml  Dockerfile  Makefile  README.md  TRANSCRIPTION_TEST_RESULTS.md  test-docker.sh
data_processing/sample_data/: test.md  test.xlsx  test_lesson.txt
data_processing/src/: file_types.rs  handlers.rs  main.rs  models.rs
data_processing/src/gen_ai/: client.rs  mod.rs
data_processing/src/handlers/: health.rs  labels.rs  mod.rs  query.rs  transcribe.rs  upload_file.rs  upload_multipart.rs
data_processing/src/injectors/: chunk.rs  db.rs  document.rs  mod.rs
data_processing/src/labels/: db.rs  mod.rs  normalization.rs
data_processing/src/processors/: audio.rs  document.rs  image.rs  mod.rs  tabular.rs  text.rs
data_processing/src/prompts/: extract_qa.rs  mod.rs  reformat.rs
data_processing/transcripts/: Monologue.txt
live_dashboard/: Dockerfile  Makefile  README.md  docker-entrypoint.sh  mix.exs  project_info.md
live_dashboard/assets/: package-lock.json  package.json
live_dashboard/assets/css/: app.css
live_dashboard/assets/js/: app.js  chart_hook.js  map_hook.js
live_dashboard/assets/js/hooks/: scroll_to_form.js
live_dashboard/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
live_dashboard/lib/live_dashboard/: chunk.ex  document.ex  file_jobs.ex  metrics.ex  release.ex  school.ex
live_dashboard/lib/live_dashboard/file_jobs/: job.ex
live_dashboard/lib/live_dashboard/schemas/: exam_result.ex  guide.ex  intervention.ex  municipality.ex  project.ex  region.ex  school.ex
live_dashboard/lib/live_dashboard_web/: endpoint.ex  menu_helpers.ex  router.ex
live_dashboard/priv/gettext/: default.pot
live_dashboard/priv/repo/: seeds.exs
raw_data/: students.csv
(+56 files in other folders)
