[package]
name = "data_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
actix-rt = "2"
tempfile = "3"
